temp.txt
E:\HTML Codes\Projects\Capstone Project\backend\controllers\adminController.js:692
const Coupon = require('../models/Coupon');
      ^

SyntaxError: Identifier 'Coupon' has already been declared
    at wrapSafe (node:internal/modules/cjs/loader:1691:18)
    at Module._compile (node:internal/modules/cjs/loader:1734:20)
    at Object..js (node:internal/modules/cjs/loader:1892:10)
    at Module.load (node:internal/modules/cjs/loader:1480:32)
    at Module._load (node:internal/modules/cjs/loader:1299:12)
    at TracingChannel.traceSync (node:diagnostics_channel:328:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:245:24)
    at Module.require (node:internal/modules/cjs/loader:1503:12)
    at require (node:internal/modules/helpers:152:16)
    at Object.<anonymous> (E:\HTML Codes\Projects\Capstone Project\backend\routes\authRoutes.js:53:5)

Node.js v25.2.1
